2008-07-02  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/dcraw.c: Added 'dcraw' delegate proxy support so that
	many common RAW camera formats will be correctly read by default.

2008-06-29  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* version.sh: GraphicsMagick 1.2.4 released.
	* utilities/Makefile.am (install-exec-local-utilities): Add back
	in support for --enable-magick-compat which was accidentally
	dropped in the new makefiles for GraphicsMagick 1.2.  Resolves
	SourceForge bug 2005883.

2008-06-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* Magick++/lib/Image.cpp (quantize): Error measurement support was
	being performed incorrectly.  SyncImage() is not needed here.

2008-06-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/image.c (GetImageCharacteristics): Don't access image
	pixels if they are not defined yet.
	* coders/{avi.c,avs.c,dcm.c,ept.c,fits.c,mtv.c,palm.c,rla.c,tga.c}:
	Readers are now much more robust when faced with reading random files.

2008-06-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/image.c (SetImageInfo): Extend the list of extensions to
	exclude to include all virtual delegates and coders for
	pseudo-formats.

2008-06-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* version.sh: GraphicsMagick 1.2.3 released.

2008-06-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/gem.c (GenerateNoise): Poisson noise generation was
	taking excessively long and producing wrong results.

2008-06-02  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/xcf.c (ReadXCFImage): Deal with grayscale images the
	GraphicsMagick-way.

2008-06-01  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/xcf.c (ReadXCFImage): Validate XCF file data so that
	corrupted files don't crash GraphicsMagick.

2008-05-30  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/dpx.c (ReadDPXImage): Incrementally read user data