@@ -1,4 +1,4 @@
-.TH gm 1 "2008/05/28" "GraphicsMagick"
+.TH gm 1 "2008/07/03" "GraphicsMagick"
 .TP
 .in 15
 .in 15
@@ -842,7 +842,6 @@ with the opacity channel in \fIchange-image\fP. The other channels are
 copied untouched.
 
 .in 15
-
 .in 15
 .B "CopyCyan"
 .in 20
@@ -888,6 +887,7 @@ base-image be in CMYK(A) colorspace. If change-image is not in CMYK
 space, then the change-image pixel intensities are used.
 
 .in 15
+
 .TP
 .B "-compress \fI<type>"\fP
 \fRthe type of image compression
@@ -8487,7 +8487,7 @@ based on his Zoom program.
 spatial subdivision color reduction algorithm is based on his Img software.
 .SH COPYRIGHT
 
-\fBCopyright (C) 2002, 2003 GraphicsMagick Group, an organization
+\fBCopyright (C) 2002 - 2008 GraphicsMagick Group, an organization
 dedicated to making software imaging solutions freely available.\fP
 
 \fBPermission is hereby granted, free of charge, to any person obtaining a
